task-2/task2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task2-service
spec:
  selector:
    app: task2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
